# Chronos-Autonomous-Scheduling-Agent

./: .gitignore  LICENSE  LINKEDIN_STRATEGY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
frontend/: package.json
scripts/: cli.py  demo.py  setup.sh
src/chronos/: __init__.py  config.py
src/chronos/agents/: __init__.py  analyzer.py  base.py  email_handler.py  resolver.py  scheduler.py
src/chronos/api/: __init__.py  app.py
src/chronos/graph/: __init__.py  workflow.py
src/chronos/integrations/: __init__.py  calendar.py  gmail.py
src/chronos/models/: __init__.py  base.py  llama.py
src/chronos/training/: __init__.py  data_prep.py  dpo_trainer.py
src/chronos/utils/: __init__.py  formatting.py  logger.py  prompts.py
